--- a/views/market.ejs
+++ b/views/market.ejs
@@ -43,7 +43,7 @@
 
 
             <!-- genral stocks section -->
-            <div class="px-auto">
+            <div class="max-w-6xl">
                 <div class="my-4 absolute-center pt-20">
                     <h2 class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5">Trending Stocks</h2>
                 </div>
