--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,76 +1,29 @@
-<section class="p-1 min-w">
-  <h2 class="text-blue-200 text-center text-4xl lg:text-6xl font-semibold">
-    TradeByte
-  </h2>
-  <div class="flex flex-col mb-6 shadow-lg rounded-lg bg-gray-300">
-    <div class="rounded-t mb-0 px-6 pt-6 pb-2">
-      <div class="btn-wrapper text-center">
-        <a href="/auth/google" class="w-full">
-          <button
-            class="bg-white active:bg-gray-100 text-gray-800 font-normal px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1 uppercase shadow hover:shadow-md inline-flex items-center font-bold text-xs justify-center w-full"
-            type="button"
-            style="transition: all 0.15s ease 0s;"
-          >
-            <img alt="..." class="w-5 mr-1" src="/images/google.png" />Sign in
-            with Google
-          </button>
-        </a>
-      </div>
-      <%- include('./partials/_messages') %>
-      <hr class="mt-6 border-b-1 border-gray-400" />
-    </div>
-    <div class="flex-auto px-4 lg:px-10 pb-10 pt-0">
-      <div class="text-gray-500 text-center mb-3 font-bold">
-        <small>Or sign in with credentials</small>
-      </div>
-      <form action="/user/signin" method="POST">
-        <div class="relative w-full mb-3">
-          <label
-            class="block uppercase text-gray-700 text-xs font-bold mb-2"
-            for="grid-password"
-            >Email</label
-          >
-          <input
-            type="email"
-            name="email"
-            class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-            placeholder="Email"
-            style="transition: all 0.15s ease 0s;"
-          />
-        </div>
-        <div class="relative w-full mb-3">
-          <label
-            class="block uppercase text-gray-700 text-xs font-bold mb-2"
-            for="grid-password"
-            >Password</label
-          >
-          <input
-            type="password"
-            name="password"
-            class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
-            placeholder="Password"
-            style="transition: all 0.15s ease 0s;"
-          />
-        </div>
-        <div class="text-center mt-6">
-          <button
-            class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
-            type="submit"
-            style="transition: all 0.15s ease 0s;"
-          >
-            Sign In
+<div class="antialiased bg-gray-300 w-full h-full">
+    <div class="bg-white w-full text-gray-700">
+      <div x-data="{ open: true }" class="flex flex-col w-full mx-auto md:items-center md:justify-between md:flex-row container mx-auto">
+        <div class="flex flex-row items-center justify-between p-4">
+          <a href="#" class="flex-shrink-0 text-center">
+            <img class="h-8 w-8 tradebyte-logo " src="../images/TradeByte-Favicon.png" alt="Logo">
+          </a>
+          <h4 class="font-bold text-center pt-1">
+            <a href="/"
+              class="hover:text-gray-900 tracking-widest text-2xl md:text-2xl lg:text-3xl tradebyte-logo">Tradebyte</a>
+          </h4>
+          <button class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" @click="open = !open">
+            <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
+              <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+              <path x-show="open" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+            </svg>
           </button>
         </div>
-      </form>
-      <a href="/user/signup"
-        ><button
-          class="bg-red-900 text-white active:bg-red-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
-          type="button"
-          style="transition: all 0.15s ease 0s;"
-        >
-          Sign Up
-        </button>
-      </a>
+        <nav :class="{'flex': open, 'hidden': !open}" class="flex-col hidden pb-4 md:pb-0 md:flex md:justify-center md:flex-row">
+          <a class="px-4 py-2 mt-2 text-sm font-semibold   rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Features</a>
+          <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Reviews</a>
+          <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">About</a>
+          <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Contact</a>
+          <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Sign In</a>
+          <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white  md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Sign Up</a>
+        </nav>
     </div>
   </div>
-</section>
+</div>
