--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -46,8 +46,8 @@
         </div>
       </form>
 
-      <div class="card flex flex-wrap justify-around sm:flex-col md:flex-col">
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+      <div class="card flex flex-wrap justify-around">
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 1</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -65,7 +65,7 @@
             >
           </div>
         </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 2</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -83,7 +83,7 @@
             >
           </div>
         </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 3</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -98,24 +98,6 @@
             <span
               class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
               >CVC : 005</span
-            >
-          </div>
-        </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Test Card 4</div>
-            <p class="text-gray-700 mb-6 text-base text-base">
-              4000 0566 5566 5556
-            </p>
-          </div>
-          <div class="px-6 pt-4 pb-2">
-            <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
-              >MM/YY : 10/40</span
-            >
-            <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
-              >CVC : 999</span
             >
           </div>
         </div>
