--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeByte</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
 
     <style>
-        #error {
-            color: #29c2c2;
-        }
-        
-        h1 {
-            font-weight: bold;
-        }
-        
-        h2 {
-            font-weight: bold;
-        }
+      .error {
+        color: #3a7bd5;
+      }
+
+      h1 {
+        font-weight: bold;
+      }
+
+      h2 {
+        font-weight: bold;
+      }
     </style>
-</head>
+  </head>
 
-<body style="display: flex; justify-content: center; align-items: center">
-    <div style="display: flex; justify-content: center; align-items: center" class="max-w-sm w-full lg:max-w-full lg:flex">
-        <div class="mt-10 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col shadow-lg">
-            <div class="mb-8">
-                <h1 class="text-center text-6xl">4 <i id="error" class="fas fa-frown"></i> 4</h1>
-                <h2 class="text-center text-black text-xl">PAGE NOT FOUND</h2>
-                <p class="text-black text-center mt-2 "> The page you are looking for was moved or doesn't exist</p>
-            </div>
-            <div>
-                <p class="text-black text-center">Let's get to back</p>
-            </div>
-            <div style="display: flex; justify-content: center;">
-                <button onclick="back()" class="bg-teal-400 hover:bg-gray-500 text-white font-bold py-2 px-4 mt-4 border border-blue-700 rounded">
-                    Go to Homepage
-                  </button>
-
-            </div>
+  <body style="display: flex; justify-content: center; align-items: center">
+    <div
+      style="display: flex; justify-content: center; align-items: center"
+      class="max-w-sm w-full lg:max-w-full lg:flex"
+    >
+      <div
+        class="mt-10 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-6 flex flex-col shadow-lg"
+      >
+        <div class="mb-4">
+          <h1 class="text-center text-6xl">
+            4 <i class="error fas fa-frown"></i> 4
+          </h1>
+          <h2 class="text-center text-black text-2xl">PAGE NOT FOUND</h2>
+          <p class="text-black text-center px-2 text-xl mt-2">
+            The page/stock you are looking for <br />
+            was moved or doesn't exist
+          </p>
         </div>
+        <div>
+          <p class="text-black text-center text-xl">Let's get to back</p>
+        </div>
+        <div style="display: flex; justify-content: center">
+          <button
+            onclick="back()"
+            class="error hover:bg-blue-100 font-bold py-2 px-4 mt-4 border border-blue-700 rounded"
+          >
+            Go to Homepage
+          </button>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
 <script>
-    function back() {
-        window.location.href = "/";
-    }
+  function back() {
+    window.location.href = "/";
+  }
 </script>
