--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,13 +1,11 @@
 <main class="md:col-span-4 md:ml-56 lg:ml-64 md:pr-14 w-full">
-  <div class="container px-5 py-10 mx-auto md:px-auto">
-    <!-- <div class="absolute-center mx-auto"> -->
+    <div class="container px-5 py-10 mx-auto md:px-auto">
+        <!-- <div class="absolute-center mx-auto"> -->
 
-    <!-- header -->
+        <!-- header -->
 
-    <header class="my-4 absolute-center">
-      <span
-        class="text-gray-700 text-3xl font-semibold leading-none tracking-wider"
-        >Hello,</span
+        <header class="my-4 absolute-center">
+            <span class="text-gray-700 text-3xl font-semibold leading-none tracking-wider">Hello,</span
       >
       <h2 class="text-gray-800 text-5xl leading-none tracking-wider view-link">
         <%= user.displayName%>.
@@ -71,41 +69,37 @@
               $40,342.04
             </p>
             <span class="block text-gray-500 text-sm">Total Portfolio</span>
-          </div>
-        </div>
+    </div>
+    </div>
 
-        <!-- card 2 -->
+    <!-- card 2 -->
 
-        <div
-          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
-        >
-          <div class="flex-shrink-0 w-10 h-10">
+    <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
+        <div class="flex-shrink-0 w-10 h-10">
             <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
-          </div>
-          <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
+        </div>
+        <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
             <p class="text-gray-900 whitespace-no-wrap">
-              $ 40,342.04
+                $ 40,342.04
             </p>
             <span class="block text-gray-500 text-sm">Profit / Loss</span>
-          </div>
         </div>
+    </div>
 
-        <!-- card 3 -->
+    <!-- card 3 -->
 
-        <div
-          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
-        >
-          <div class="flex-shrink-0 w-10 h-10">
+    <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
+        <div class="flex-shrink-0 w-10 h-10">
             <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
-          </div>
-          <div class="font-bold text-xl xl:text-2xl ml-3">
+        </div>
+        <div class="font-bold text-xl xl:text-2xl ml-3">
             <p class="text-gray-900 whitespace-no-wrap">
-              $40,342.04
+                $40,342.04
             </p>
             <span class="block text-gray-500 text-sm">$ Balance</span>
-          </div>
         </div>
-      </div>
+    </div>
+    </div>
     </div>
 
     <!-- overview heading -->
@@ -117,14 +111,13 @@
     <!-- container for both tables -->
 
     <div class="lg:grid lg:grid-cols-2 -mx-8">
-      <!-- table component 1 -->
+        <!-- table component 1 -->
 
-      <div class="px-3 sm:px-6 py-4 overflow-hidden h-auto w-full">
-        <div class="flex justify-between">
-          <!-- heading of table -->
-          <h2 class="text-lg font-bold leading-tight py-3">Trade History</h2>
-          <a href="#" class="mt-3 font-bold text-tempc-400"
-            >View All <span class="font-extrabold">></span></a
+        <div class="px-3 sm:px-6 py-4 overflow-hidden h-auto w-full">
+            <div class="flex justify-between">
+                <!-- heading of table -->
+                <h2 class="text-lg font-bold leading-tight py-3">Trade History</h2>
+                <a href="#" class="mt-3 font-bold text-tempc-400">View All <span class="font-extrabold">></span></a
           >
         </div>
 
@@ -542,9 +535,21 @@
           //sample data
       const dataset = <%- JSON.stringify(totalData) %>;
 
+// when symbol matches
+
       let data = dataset.filter(function(el) {
           return el.Symbol.includes(value.toUpperCase())
       })
+
+// when no symbol matches
+
+      if (data.length === 0) {
+
+let data1 = dataset.filter(function(el) {
+    return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
+})
+data = data1;
+}
 
       let list = "";
       if (value === "") {
@@ -555,4 +560,4 @@
       for (i = 0; i <= (n - 1); i++) {
           let item = data[i];
           list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>` } document.getElementById('search-result').innerHTML = list ;console.log(data) })
-</script>
+                </script>
