--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -15,7 +15,6 @@
       <img
         class="h-8 w-8 tradebyte-logo"
         src="../images/TradeByte-Favicon.png"
-        alt="Logo"
       />
     </div>
     <h4 class="font-bold text-center pt-1">
@@ -55,7 +54,7 @@
     <div class="flex justify-center align-center rounded-full">
       <div class="notification">
         <img
-          class="h-16 w-16 border-8 user-profile box-1 rounded-full"
+          class="w-24 border-8 user-profile box-1 rounded-full"
           src="<%= user.image %>"
           alt=""
         />
@@ -82,16 +81,16 @@
     </div>
 
     <a
-      class="block w-2/5 md:w-4/5 max-w-xs p-2 mt-4 mb-8 mx-auto text-xs font-bold text-gray-900 focus:shadow-outline flex justify-center rounded-full text-green-900 font-bold tick-background"
+      class="block w-2/5 md:w-4/5 max-w-xs p-2 mt-4 mb-8 mx-auto text-xs font-bold text-gray-900 focus:shadow-outline flex justify-center items-center text-sm rounded-full text-green-900 font-bold tick-background"
       href="#"
     >
       <div class="tick mr-1">
         <svg
-          class="w-5 mr-1"
+          class="w-5"
           fill="none"
           stroke-linecap="round"
           stroke-linejoin="round"
-          stroke-width="2"
+          stroke-width="3"
           viewBox="0 0 24 24"
           stroke="currentColor"
         >
