--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,11 +1,13 @@
 <main class="md:col-span-4 md:ml-56 lg:ml-64 md:pr-14 w-full">
-    <div class="container px-5 py-10 mx-auto md:px-auto">
-        <!-- <div class="absolute-center mx-auto"> -->
+  <div class="container px-5 py-10 mx-auto md:px-auto">
+    <!-- <div class="absolute-center mx-auto"> -->
 
-        <!-- header -->
+    <!-- header -->
 
-        <header class="my-4 absolute-center">
-            <span class="text-gray-700 text-3xl font-semibold leading-none tracking-wider">Hello,</span
+    <header class="my-4 absolute-center">
+      <span
+        class="text-gray-700 text-3xl font-semibold leading-none tracking-wider"
+        >Hello,</span
       >
       <h2 class="text-gray-800 text-5xl leading-none tracking-wider view-link">
         <%= user.displayName%>.
@@ -17,12 +19,12 @@
     <!-- search box -->
 
     <div>
-      <div class="relative text-gray-600 mt-12 shadow-md rounded-b-lg">
+      <div class="bg-white relative text-gray-800 mt-12 shadow-md rounded-lg">
         <input
           id="searchbar"
           type="search"
           name="serch"
-          placeholder="Search Stocks by Symbols"
+          placeholder="Search Stocks"
           class="bg-transparent h-10 px-5 pl-10 rounded-full text-lg focus:outline-none"
         />
         <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
@@ -35,7 +37,7 @@
             x="0px"
             y="0px"
             viewBox="0 0 56.966 56.966"
-            style="enable-background: new 0 0 56.966 56.966;"
+            style="enable-background: new 0 0 56.966 56.966"
             xml:space="preserve"
             width="512px"
             height="512px"
@@ -49,11 +51,11 @@
 
       <ul
         id="search-result"
-        style="height: 0px; overflow: hidden; white-space: pre;"
+        style="height: 0px; overflow: hidden; white-space: pre"
         class="text-lg p-5 ml-10 list-none mt-0 text-gray-700"
       ></ul>
 
-      <div class="mt-8 grid lg:grid-cols-3 gap-10">
+      <div class="mt-4 grid lg:grid-cols-3 gap-10">
         <!-- cards go here -->
 
         <!-- card1 -->
@@ -65,41 +67,39 @@
             <img class="w-full h-full" src="images/graph.jpeg" alt=" " />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3">
-            <p class="text-gray-900 whitespace-no-wrap">
-              $40,342.04
-            </p>
+            <p class="text-gray-900 whitespace-no-wrap">$40,342.04</p>
             <span class="block text-gray-500 text-sm">Total Portfolio</span>
-    </div>
-    </div>
-
-    <!-- card 2 -->
-
-    <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
-        <div class="flex-shrink-0 w-10 h-10">
-            <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
+          </div>
         </div>
-        <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
-            <p class="text-gray-900 whitespace-no-wrap">
-                $ 40,342.04
-            </p>
+
+        <!-- card 2 -->
+
+        <div
+          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
+        >
+          <div class="flex-shrink-0 w-10 h-10">
+            <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
+          </div>
+          <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
+            <p class="text-gray-900 whitespace-no-wrap">$ 40,342.04</p>
             <span class="block text-gray-500 text-sm">Profit / Loss</span>
+          </div>
         </div>
-    </div>
 
-    <!-- card 3 -->
+        <!-- card 3 -->
 
-    <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
-        <div class="flex-shrink-0 w-10 h-10">
+        <div
+          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
+        >
+          <div class="flex-shrink-0 w-10 h-10">
             <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
-        </div>
-        <div class="font-bold text-xl xl:text-2xl ml-3">
-            <p class="text-gray-900 whitespace-no-wrap">
-                $40,342.04
-            </p>
+          </div>
+          <div class="font-bold text-xl xl:text-2xl ml-3">
+            <p class="text-gray-900 whitespace-no-wrap">$40,342.04</p>
             <span class="block text-gray-500 text-sm">$ Balance</span>
+          </div>
         </div>
-    </div>
-    </div>
+      </div>
     </div>
 
     <!-- overview heading -->
@@ -111,13 +111,14 @@
     <!-- container for both tables -->
 
     <div class="lg:grid lg:grid-cols-2 -mx-8">
-        <!-- table component 1 -->
+      <!-- table component 1 -->
 
-        <div class="px-3 sm:px-6 py-4 overflow-hidden h-auto w-full">
-            <div class="flex justify-between">
-                <!-- heading of table -->
-                <h2 class="text-lg font-bold leading-tight py-3">Trade History</h2>
-                <a href="#" class="mt-3 font-bold text-tempc-400">View All <span class="font-extrabold">></span></a
+      <div class="px-3 sm:px-6 py-4 overflow-hidden h-auto w-full">
+        <div class="flex justify-between">
+          <!-- heading of table -->
+          <h2 class="text-lg font-bold leading-tight py-3">Trade History</h2>
+          <a href="#" class="mt-3 font-bold text-tempc-400"
+            >View All <span class="font-extrabold">></span></a
           >
         </div>
 
@@ -162,14 +163,10 @@
             <tbody>
               <tr class="bg-white">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 21, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 21, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Gdax
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Gdax</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -195,14 +192,10 @@
               </tr>
               <tr class="bg-gray-100">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 8, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 8, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Bitterx
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Bitterx</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -230,14 +223,10 @@
               </tr>
               <tr class="bg-white">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 21, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 21, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Gdax
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Gdax</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -264,14 +253,10 @@
               </tr>
               <tr class="bg-gray-100">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 8, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 8, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Bitterx
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Bitterx</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -299,14 +284,10 @@
               </tr>
               <tr class="bg-white">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 21, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 21, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Gdax
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Gdax</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -334,14 +315,10 @@
               </tr>
               <tr class="bg-gray-100">
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-600 whitespace-no-wrap">
-                    Jan 8, 2020
-                  </p>
+                  <p class="text-gray-600 whitespace-no-wrap">Jan 8, 2020</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
-                  <p class="text-gray-900 whitespace-no-wrap">
-                    Bitterx
-                  </p>
+                  <p class="text-gray-900 whitespace-no-wrap">Bitterx</p>
                 </td>
                 <td class="px-3 py-3 border-b border-gray-200 text-sm">
                   <p class="text-gray-900 whitespace-no-wrap uppercase">
@@ -528,36 +505,36 @@
 <!-- script for search bar -->
 
 <script>
-  const inputField = document.getElementById('searchbar')
-  inputField.addEventListener('input', (event) => {
-      console.log(event.target.value)
-      const value = event.target.value
-          //sample data
-      const dataset = <%- JSON.stringify(totalData) %>;
+    const inputField = document.getElementById('searchbar')
+    inputField.addEventListener('input', (event) => {
+        console.log(event.target.value)
+        const value = event.target.value
+            //sample data
+        const dataset = <%- JSON.stringify(totalData) %>;
 
-// when symbol matches
+  // when symbol matches
 
-      let data = dataset.filter(function(el) {
-          return el.Symbol.includes(value.toUpperCase())
-      })
+        let data = dataset.filter(function(el) {
+            return el.Symbol.includes(value.toUpperCase())
+        })
 
-// when no symbol matches
+  // when no symbol matches
 
-      if (data.length === 0) {
+        if (data.length === 0) {
 
-let data1 = dataset.filter(function(el) {
-    return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
-})
-data = data1;
-}
+  let data1 = dataset.filter(function(el) {
+      return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
+  })
+  data = data1;
+  }
 
-      let list = "";
-      if (value === "") {
-          list = "";
-          data = [];
-      }
-      let n = data.length
-      for (i = 0; i <= (n - 1); i++) {
-          let item = data[i];
-          list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>` } document.getElementById('search-result').innerHTML = list ;console.log(data) })
-                </script>
+        let list = "";
+        if (value === "") {
+            list = "";
+            data = [];
+        }
+        let n = data.length
+        for (i = 0; i <= (n - 1); i++) {
+            let item = data[i];
+            list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>` } document.getElementById('search-result').innerHTML = list ;console.log(data) })
+</script>
