--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -34,8 +34,6 @@ body {
 .user-profile {
   border-radius: 100px;
   border: 10px solid #1955e4;
-  width: 130px;
-  height: 130px;
 }
 
 .tick {
@@ -105,11 +103,11 @@ body {
 
 .notification .badge {
   position: absolute;
-  top: -10px;
-  right: -10px;
+  top: -5px;
+  right: -5px;
   padding: 5px 2px;
   border-radius: 50%;
-  background-color: #1955e4;
+  background-color: #0072ff;
   color: white;
 }
 
