--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -10,7 +10,6 @@ body {
   height: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
-  background-color: rgb(226, 232, 240);
 }
 
 @tailwind components;
@@ -101,6 +100,49 @@ body {
 @media (max-width: 400px) {
   .min-w {
     min-width: 300px;
+  }
+}
+
+/* Login Page */
+animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animated.faster {
+  -webkit-animation-duration: 500ms;
+  animation-duration: 500ms;
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+.fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
   }
 }
 
