--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,9 +3,7 @@
     TradeByte
   </h2>
   <div class="flex flex-col my-6 shadow-lg rounded-lg bg-gray-300">
-    <div
-      class="rounded-t mb-0 px-6 py-6 text-lg font-bold w-full flex justify-center items-center flex-col"
-    >
+    <div class="rounded-t mb-0 px-6 py-6 text-lg font-bold w-full flex justify-center items-center flex-col">
       <p>Sign Up for&nbsp; <a href="/" class="text-blue-700">TradeByte</a></p>
       <%- include('./partials/_messages') %>
     </div>
