edit icon fix, nav, hero and footer done for landing page

--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -19,7 +19,7 @@
     <title>TradeByte</title>
   </head>
 
-  <body class="flex justify-center items-center w-screen bg-gray-700">
+  <body class="flex justify-center items-center w-screen">
     <%- body %>
 
     <script src="javascript/script.js"></script>
