--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -60,9 +60,9 @@
         />
 
         <a href="/edit"
-          ><span class="badge">
+          ><span class="badge relative w-10 h-10">
             <svg
-              class="w-5 ml-2 mr-1"
+              class="w-6 h-6 ml-2 absolute top-0 left-0 mt-2"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
