--- a/views/market.ejs
+++ b/views/market.ejs
@@ -54,40 +54,11 @@
 
           <!-- end of search box -->
         </div>
-        <div class="container py-16 mx-auto">
-
-            <div class="flex -m-4 inline-block overflow-x-auto whitespace-no-wrap">
-                <% for(var i=0; i < compactData.length; i++) { %>
-
-                    <!-- <div class="lg:w-1/4 md:w-1/2 p-4 min-w-54 inline"> -->
-                    <div class="inline p-4 m-4">
-                        <div class="py-6 max-w-sm rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white ">
-                            <div class="space-y-10">
-                                <div class="py-2 px-10">
-                                    <div class="space-y-5">
-                                        <div class="font-bold text-2xl text-center mb-2">
-                                            <%- compactData[i]["Symbol"] %>
-                                        </div>
-                                        <p class="text-gray-700 text-center text-base">
-                                            <%- compactData[i]["Company Name"] %>
-                                        </p>
-                                        <a href="/view/<%- compactData[i]["Symbol"] %>">
-                                        <button class="w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center">
-                                        <span class="mx-auto">VIEW</span>
-                                      </button>
-                                    </a>
-                                    <a href="/cart/<%- compactData[i]["Symbol"] %>">
-                                        <button class="w-32 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center">
-                                        <span class="mx-auto">BUY</span>
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-
-
+      </div>
+    </div>
+    <div class="container pb-16 pt-8 mx-auto">
+      <div class="flex -m-4 inline-block overflow-x-auto whitespace-no-wrap">
+        <% for(var i=0; i < compactData.length; i++) { %>
         <div class="inline p-4 my-4 mx-2">
           <div
             class="py-6 w-full rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white"
@@ -101,7 +72,6 @@
                   <p class="text-gray-700 break-words text-center text-base">
                     <%- compactData[i]["Company Name"] %>
                   </p>
-
                   <button
                     class="mr-1 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                   >
@@ -117,7 +87,6 @@
             </div>
           </div>
         </div>
-
         <% } %>
       </div>
 
@@ -131,41 +100,17 @@
           </h2>
         </div>
 
-            <!-- genral stocks section -->
-            <div class="max-w-6xl">
-                <div class="my-4 absolute-center pt-20">
-                    <h2 class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5">Trending Stocks</h2>
-                </div>
-
-                <div class="md:flex -m-4 inline-block mx-auto w-full flex-wrap pt-10">
-                    <% for(var i=min; i < max; i++) { %>
-
-                        <div class="lg:w-1/4 md:w-1/2 p-4 w-54 flex justify-center">
-                                    <div class="flex items-center justify-center py-6 min-h-full w-full rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white ">
-                                        <div class="space-y-10 w-full">
-                                            <div class="py-2 px-4 md:px-10">
-                                                <div class="space-y-5">
-                                                    <div class="font-bold text-2xl text-center mb-2">
-                                                        <%- totalData[i]["Symbol"] %>
-                                                    </div>
-                                                    <p class="text-gray-700 text-center text-base">
-                                                        <%- totalData[i]["Company Name"] %>
-                                                    </p>
-<div class="flex justify-around px-6 md:px-2 w-2/3 mx-auto">
-                                                <a href="/view/<%- totalData[i]["Symbol"] %>">
-                                                    <button class="mr-1 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center">
-                                                    <span class="mx-auto">VIEW</span>
-                                                  </button>
-                                                </a>
-                                                  <a href="/cart/<%- totalData[i]["Symbol"] %>">
-                                        <button class="w-24 pl-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center">
-                                                    <span class="mx-auto">BUY</span>
-                                        </button>
-                                    </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <div class="md:flex -m-4 inline-block mx-auto w-full flex-wrap pt-10">
+          <% for(var i=min; i < max; i++) { %>
+          <div class="lg:w-1/4 md:w-1/2 p-4 w-54 flex justify-center">
+            <div
+              class="flex items-center justify-center py-6 min-h-full w-full rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white"
+            >
+              <div class="space-y-10 w-full">
+                <div class="py-2 px-4 md:px-10">
+                  <div class="space-y-5">
+                    <div class="font-bold text-2xl text-center mb-2">
+                      <%- totalData[i]["Symbol"] %>
                     </div>
                     <p class="text-gray-700 break-words text-center text-base">
                       <%- totalData[i]["Company Name"] %>
@@ -176,7 +121,6 @@
                       >
                         <span class="mx-auto"><a href="/view/<%- totalData[i]["Symbol"] %>">VIEW</a></span>
                       </button>
-
                       <button
                         class="w-32 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                       >
@@ -188,7 +132,6 @@
               </div>
             </div>
           </div>
-
           <% } %>
         </div>
 
@@ -256,25 +199,21 @@
   var next = document
     .getElementById("next")
     .addEventListener("click", nextPage);
-
   function prevPage() {
     var url = window.location.href;
     var pageNo = url.slice(url.length - 1, url.length);
     var pageUrl = url.slice(0, url.length - 1);
-
     if (pageNo == "t") {
     } else if (pageNo == "/") {
     } else {
       window.location.href = pageUrl + (parseInt(pageNo) - 1);
     }
   }
-
   function nextPage() {
     if (window.location.pathname !== "/market/59") {
       var url = window.location.href;
       var pageNo = url.slice(url.length - 1, url.length) || 0;
       var pageUrl = url.slice(0, url.length - 1);
-
       if (pageNo == "t") {
         window.location.href = window.location.href + "/2";
       } else if (pageNo == "/") {
@@ -295,37 +234,28 @@
       const value = event.target.value
           //sample data
       const dataset = <%- JSON.stringify(totalData) %>;
-
       // searching the symbol
-
       let data = dataset.filter(function(el) {
           return el.Symbol.includes(value.toUpperCase())
       })
-
       // when no symbol matched
-
       if (data.length === 0) {
-
           let data1 = dataset.filter(function(el) {
               return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
           })
           data = data1;
       }
-
       let list = "";
       if (value === "") {
           list = "";
           data = [];
       }
-
       let n = data.length
-
       for (i = 0; i <= (n - 1); i++) {
           let item = data[i];
           list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>`
       }
       document.getElementById('search-result').innerHTML = list;
-
       console.log(data)
   })
 </script>
