bug fixes and changes in UI

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,11 +82,11 @@
   <!-- Hero Section -->
   <div class="max-w-4xl lg:max-w-5xl my-4 md:my-0 mx-4 md:mx-auto">
     <div class="wrapper flex flex-col md:flex-row items-center justify-between max-w-6xl h-2/3 mx-auto">
-      <div class="text-box md:w-1/2 flex justify-start flex-col text-center md:text-left md:ml-8 md:mb-16">
-        <h1 class="text-3xl sm:text-5xl lg:text-6xl font-bold mb-4 text-gray-900">TradeByte</h1>
-        <p class="text-md sm:text-2xl text-gray-700">Welcome to TradeByte, stocks trading simulation webapp. Your one stop to all the latest stocks and their insights.</p>
+      <div class="text-box md:w-1/2 flex justify-start flex-col text-center md:text-left md:ml-8 md:mb-16 ld:ml-0">
+        <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-4 text-gray-900">TradeByte</h1>
+        <p class="text-md sm:text-xl lg:text-2xl text-gray-700">Welcome to TradeByte, stocks trading simulation webapp. Your one stop to all the latest stocks and their insights.</p>
       </div>
-      <div class="illustration-box w-1/2">
+      <div class="illustration-box w-2/3">
         <img src="../images/desktop-mockup.png" alt="TradeByte Illustration" />
       </div>
     </div>
@@ -94,20 +94,20 @@
   <footer class="flex justify-center px-4 text-gray-100 bg-gray-800">
     <div class="container py-6">
       <div
-        class="heading md:flex md:max-w-3xl md:justify-center md:items-center md:mx-auto"
+        class="heading md:flex md:max-w-5xl md:justify-between md:items-center md:mx-auto"
       >
-        <h1 class="text-center md:text-left text-lg font-bold lg:text-2xl">
+        <h1 class="text-center md:text-left text-lg font-bold lg:text-3xl max-w-3xl">
           Join TradeByte to keep up with the latest news about stocks and
           trading.
         </h1>
 
         <div class="flex justify-center items-center md:ml-6">
           <div class="bg-white rounded-lg mt-4">
-            <button
-              class="w-full p-2 text-sm bg-red-700 rounded-lg font-semibold uppercase px-3 "
+            <a href="/user/signup"
+              class="w-full p-2 lg:p-4 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
             >
               SignUp
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -122,6 +122,7 @@
         <div class="flex mt-4 md:m-0 items-start">
           <div class="-mx-4">
             <p>&copy;Copyright TradeByte Team, 2020</p>
+            <a target="_blank" href="https://github.com/iampavangandhi/TradeByte">Check the code on GitHub</a>
           </div>
         </div>
       </div>
@@ -134,7 +135,7 @@
   style="background: rgba(0, 0, 0, 0.7)"
 >
   <div
-    class="border border-teal-500 shadow-lg modal-container bg-gray-300 w-11/12 md:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto"
+    class="border border-teal-500 shadow-lg modal-container bg-gray-100 w-11/12 md:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto"
   >
     <div class="modal-content py-4 text-left px-6">
       <!--Title-->
