--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -161,7 +161,7 @@
       <!-- only for development purpose i added ADD BALANCE button here on navbar. -->
 
       <a
-        class="block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 hover:text-blue-800 focus:text-blue-900 hover:bg-blue-100 focus:bg-blue-200 focus:outline-none focus:shadow-outline flex <%= href === '/trasaction' ? 'border tab-color border-l-8': '' %>"
+        class="block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 hover:text-blue-800 focus:text-blue-900 hover:bg-blue-100 focus:bg-blue-200 focus:outline-none focus:shadow-outline flex <%= href === '/transaction' ? 'border tab-color border-l-8': '' %>"
         href="/transaction"
         ><svg
           class="w-5 ml-2 mr-1"
