hero and footer section fixed for all screen sizes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -99,15 +99,15 @@
       <div
         class="heading md:flex md:max-w-5xl md:justify-between md:items-center md:mx-auto"
       >
-        <h1 class="text-center md:text-left text-lg font-bold lg:text-3xl max-w-3xl">
+        <h1 class="text-center md:text-left text-lg font-bold lg:text-2xl max-w-4xl">
           Join TradeByte to keep up with the latest news about stocks and
           trading.
         </h1>
 
         <div class="flex justify-center items-center md:ml-6">
-          <div class="bg-white rounded-lg mt-4">
+          <div class="bg-white rounded-lg mt-4 md:mt-0">
             <a href="/user/signup"
-              class="w-full p-2 lg:p-4 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
+              class="w-full p-3 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
             >
               SignUp
             </a>
